User regstration and authentication.

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -747,6 +747,86 @@
       <div class="container-fluid">
         
         <!--  Router view should be declared here -->
+        <div class="row">
+          <div class="col-12 inst-wrapper">
+            <div class="card">
+              <h5 class="card-header"><a href="#">Institution name</a></h5>
+              <div class="card-body">
+                <!-- <button class="btn btn-primary badge-pill">
+                  78 Programs
+                </button> -->
+                <button class="btn btn-info badge-pill mr-3">
+                  78 Programs
+                </button>
+                <button class="btn btn-danger badge-pill">
+                  7889 Application
+                </button>
+                <a class="float-right" href="#site"><b>www.udsm.ac.tz</b></a>
+                <div class="pt-3">
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 inst-wrapper">
+            <div class="card">
+              <h5 class="card-header"><a href="#">Institution name</a></h5>
+              <div class="card-body">
+                <!-- <button class="btn btn-primary badge-pill">
+                  78 Programs
+                </button> -->
+                <button class="btn btn-info badge-pill mr-3">
+                  78 Programs
+                </button>
+                <button class="btn btn-danger badge-pill">
+                  9 Application
+                </button>
+                <a class="float-right" href="#site"><b>www.udsm.ac.tz</b></a>
+                <div class="pt-3">
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 inst-wrapper">
+            <div class="card">
+              <h5 class="card-header"><a href="#">Institution name</a></h5>
+              <div class="card-body">
+                <!-- <button class="btn btn-primary badge-pill">
+                  78 Programs
+                </button> -->
+                <button class="btn btn-info badge-pill mr-3">
+                  18 Programs
+                </button>
+                <button class="btn btn-danger badge-pill">
+                  79 Application
+                </button>
+                <a class="float-right" href="#site"><b>www.udsm.ac.tz</b></a>
+                <div class="pt-3">
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                  This university description is about some length texts to help fa-users
+                  to get some incite.
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
 
       </div><!-- /.container-fluid -->
     </section>
