--- a/public/stylesheets/cas.css
+++ b/public/stylesheets/cas.css
@@ -52,7 +52,7 @@
 }
 
 .color-red{
-  color: #ff332c;
+  color: #ff0000;
 }
 
 .color-orange{
@@ -80,7 +80,7 @@
 }
 
 .color-light-green{
-  color: #155724;
+  color: #00ce2f;
 }
 
 
@@ -119,7 +119,7 @@
 
 .alert-light-red{
   background-color: #fff8eb;
-  color: #ff5520;
+  color: #dc3545;
   border: 1px solid #f8f3e5;
 }
 
@@ -147,7 +147,7 @@
   border: 1px solid #d4d4d4;
 }
 
-.router-link-exact-active{
+.router-link-active{
   background-color: #17a2b8 !important;
   color: #fff !important;
 }
@@ -157,3 +157,25 @@
   color: #c2c7d0 !important;
 }
 
+
+.inst-wrapper{
+  padding-left: 8rem;
+  padding-right: 8rem;
+}
+
+.elevate:hover{
+  box-shadow: 0 7px 8px rgba(0,0,0,.05),0 5px 5px rgba(0,0,0,.22)!important;
+}
+
+.table-elevate tr:hover{
+  box-shadow: 0 7px 8px rgba(0,0,0,.05),0 5px 5px rgba(0,0,0,.22)!important;
+  cursor: pointer;
+}
+
+.a-default{
+  color: inherit;
+}
+
+.a-default:hover{
+  color: inherit;
+}
