--- a/views/user.ejs
+++ b/views/user.ejs
@@ -42,6 +42,8 @@
       rel="stylesheet"
     />
 
+    <link href="plugins/datatables-bs4/css/dataTables.bootstrap4.css" rel="stylesheet">
+
     <link href="stylesheets/cas.css" rel="stylesheet" />
   </head>
   <!-- Menues and navigation are renderd in the server (ejs) to decide which menue
@@ -189,10 +191,10 @@
                 </router-link>
               </li>
               <li class="nav-item">
-                <router-link to="/institutions" class="nav-link">
+                <router-link to="/programs" class="nav-link">
                   <i class="nav-icon fas fa-university"></i>
                   <p>
-                    Universities
+                    Programs
                   </p>
                 </router-link>
               </li>
@@ -211,7 +213,7 @@
             <div class="row mb-2">
               <div class="col-sm-6">
                 <!-- Changes according to the router -->
-                <h1 class="m-0 text-dark">Dashboard</h1>
+                <h1 class="m-0 text-dark"></h1>
               </div>
               <!-- /.col -->
               <div class="col-sm-6">
@@ -362,6 +364,10 @@
     <script src="plugins/summernote/summernote-bs4.min.js"></script>
     <!-- overlayScrollbars -->
     <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+
+    <script src="plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
+
+    <script src="libs/axios.js"></script>
    
     <!-- AdminLTE App -->
     <script src="dist/js/adminlte.js"></script>
