Application programs draggable

--- a/public/stylesheets/cas.css
+++ b/public/stylesheets/cas.css
@@ -1,26 +1,24 @@
-
-.brand-link, .main-header{
+.brand-link,
+.main-header {
   background-color: #17a2b8 !important;
   border-bottom: none !important;
 }
 
-.brand-link{
+.brand-link {
   border-right: 1px solid #0a2f39 !important;
 }
 
-
-.content-wrapper{
+.content-wrapper {
   background-color: #ffffff;
 }
 
-.page-title{
+.page-title {
   font-size: 18px;
   color: #313131 !important;
   font-weight: 600;
 }
 
-
-.hover-pointer:hover{
+.hover-pointer:hover {
   cursor: pointer;
 }
 
@@ -28,154 +26,164 @@
   outline: none;
 }
 
-.scrollable{
+.scrollable {
   overflow: hidden;
   overflow-y: scroll;
 }
 
-.display-none{
+.display-none {
   display: none !important;
 }
 
-.h-pointer:hover{
+.h-pointer:hover {
   cursor: pointer;
 }
 
-
 /* Colors */
-.color-purple{
+.color-purple {
   color: purple;
 }
 
-.color-cyan{
+.color-cyan {
   color: #136280;
 }
 
-.color-red{
+.color-red {
   color: #ff0000;
 }
 
-.color-orange{
+.color-orange {
   color: darkorange;
 }
 
-.color-light-blue{
+.color-light-blue {
   color: #0c5460;
 }
 
-.color-cyan2{
+.color-cyan2 {
   color: #17a2b8;
 }
 
-.color-purple2{
-  color: #5B5EA6;
+.color-purple2 {
+  color: #5b5ea6;
 }
 
-.color-dark{
+.color-dark {
   color: #101010;
 }
 
-.color-light-red{
+.color-light-red {
   color: #ff5520;
 }
 
-.color-light-green{
+.color-light-green {
   color: #00ce2f;
 }
 
-
-
 /* Alerts */
-.alert-light-blue{
+.alert-light-blue {
   color: #0c5460;
   background-color: #d1ecf1;
   border: 1px solid #bee5eb;
 }
 
-.alert-light-blue:hover{
+.alert-light-blue:hover {
   color: #0a2f39;
   background-color: #d1ecf1;
   border: 1px solid #bee5eb;
 }
 
-
-.alert-purple{
+.alert-purple {
   background-color: #ffebfa;
   color: purple;
   border: 1px solid #f1dfed;
 }
 
-.alert-orange{
+.alert-orange {
   background-color: #fff8f9;
   color: darkorange;
   border: 1px solid #f5eeef;
 }
 
-.alert-loket{
+.alert-loket {
   background-color: #e5f3ff;
   color: #17a2b8;
   border: 1px solid #d7e2ee;
 }
 
-.alert-light-red{
+.alert-light-red {
   background-color: #fff8eb;
   color: #dc3545;
   border: 1px solid #f8f3e5;
 }
 
-.alert-light-green{
+.alert-light-green {
   background-color: #d4edda;
   color: #155724;
   border: 1px solid #c3e6cb;
 }
 
-.alert-light-purple{
+.alert-light-purple {
   background-color: #e2e3e5;
   color: #383d41;
   border: 1px solid #d6d8db;
 }
 
-.alert-light-yellow{
+.alert-light-yellow {
   background-color: #fff3cd;
   color: #856404;
   border: 1px solid #ffeeba;
 }
 
-.alert-dark{
+.alert-dark {
   background-color: #e0e0e0;
-  color: #5B5EA6;
+  color: #5b5ea6;
   border: 1px solid #d4d4d4;
 }
 
-.router-link-active{
+.router-link-active {
   background-color: #17a2b8 !important;
   color: #fff !important;
 }
 
-.nav-item >.active{
-  background-color:inherit !important;
+.nav-item > .active {
+  background-color: inherit !important;
   color: #c2c7d0 !important;
 }
 
-
-.inst-wrapper{
+.inst-wrapper {
   padding-left: 8rem;
   padding-right: 8rem;
 }
 
-.elevate:hover{
-  box-shadow: 0 7px 8px rgba(0,0,0,.05),0 5px 5px rgba(0,0,0,.22)!important;
+.elevate:hover {
+  box-shadow: 0 7px 8px rgba(0, 0, 0, 0.05), 0 5px 5px rgba(0, 0, 0, 0.22) !important;
 }
 
-.table-elevate tr:hover{
-  box-shadow: 0 7px 8px rgba(0,0,0,.05),0 5px 5px rgba(0,0,0,.22)!important;
+.table-elevate tr:hover {
+  box-shadow: 0 7px 8px rgba(0, 0, 0, 0.05), 0 5px 5px rgba(0, 0, 0, 0.22) !important;
   cursor: pointer;
 }
 
-.a-default{
+.a-default {
   color: inherit;
 }
 
-.a-default:hover{
+.a-default:hover {
   color: inherit;
+}
+
+.floating_btn {
+  float: right;
+  margin-right: 20px;
+  position: sticky;
+  bottom: 70px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 7px 7px rgba(0, 0, 0, 0.22) !important;
+  width: 50px;
+  height: 50px;
+}
+
+
+.cursor-move:hover{
+  cursor: move;
 }
