Multilevel AppInst Draggable full.

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -47,10 +47,10 @@
       rel="stylesheet"
     />
 
-    <link
+   <!--  <link
       href="plugins/datatables-bs4/css/dataTables.bootstrap4.css"
       rel="stylesheet"
-    />
+    /> -->
 
     <link href="stylesheets/cas.css" rel="stylesheet" />
   </head>
@@ -260,7 +260,7 @@
 
         <!-- Application modal -->
 
-        <div
+        <!-- <div
           class="modal fade"
           id="app-modal"
           tabindex="-1"
@@ -288,12 +288,7 @@
                     Bachelor of science in computer science
                   </b>
                 </div>
-                <!-- <span class="d-block"
-                  >Selected Program:
-                  <b>
-                    Bachelor of science in computer science
-                  </b>
-                </span> -->
+
                 <br />
                 <div class="form-group row">
                   <label class="col-3">Select Priority:</label>
@@ -327,7 +322,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
 
         
@@ -373,7 +368,7 @@
     <!-- overlayScrollbars -->
     <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 
-    <script src="plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
+    <!-- <script src="plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script> -->
 
     <script src="plugins/sweetalert2/sweetalert2.min.js"></script>
 
