Complete form submission

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title><%= name %> | Dashboard</title>
+
+    <!-- Load vue -->
+    <script src="vue/vuex.js"></script>
+    <script src="vue/vue.js"></script>
+    <script src="vue/vue-router.js"></script>
+
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Font Awesome -->
@@ -378,10 +384,6 @@
 
     <!-- AdminLTE App -->
     <script src="dist/js/adminlte.js"></script>
-    <!-- Load vue -->
-    <script src="vue/vuex.js"></script>
-    <script src="vue/vue.min.js"></script>
-    <script src="vue/vue-router.js"></script>
     <!-- sortable -->
     <script src="plugins/sortablejs/sortable.min.js"></script>
     <script src="plugins/sortablejs/sortable.vue.min.js"></script>
