--- a/public/stylesheets/cas.css
+++ b/public/stylesheets/cas.css
@@ -82,16 +82,16 @@
 
 /* Alerts */
 .alert-light-blue {
-  color: #0c5460;
-  background-color: #d1ecf1;
-  border: 1px solid #bee5eb;
-}
-
-.alert-light-blue:hover {
   color: #0a2f39;
   background-color: #d1ecf1;
   border: 1px solid #bee5eb;
 }
+
+/* .alert-light-blue:hover {
+  color: #0a2f39;
+  background-color: #d1ecf1;
+  border: 1px solid #bee5eb;
+} */
 
 .alert-purple {
   background-color: #ffebfa;
@@ -123,7 +123,7 @@
   border: 1px solid #c3e6cb;
 }
 
-.alert-light-purple {
+.alert-dark {
   background-color: #e2e3e5;
   color: #383d41;
   border: 1px solid #d6d8db;
@@ -135,7 +135,7 @@
   border: 1px solid #ffeeba;
 }
 
-.alert-dark {
+.alert-light-purple {
   background-color: #e0e0e0;
   color: #5b5ea6;
   border: 1px solid #d4d4d4;
@@ -177,10 +177,19 @@
   float: right;
   margin-right: 20px;
   position: sticky;
-  bottom: 70px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 7px 7px rgba(0, 0, 0, 0.22) !important;
+  
+}
+
+.floating_btn_add_prog{
   width: 50px;
   height: 50px;
+  bottom: 70px;
+}
+
+.floating_btn_save {
+  bottom: 400px;
+  margin-right: 5px;
 }
 
 
