JWT admin authentication

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -88,6 +88,11 @@
               <a v-if="isSuper" href="#" class="dropdown-item">
                 <i class="fas fa-asterisk mr-2"></i> Attribute
               </a>
+              <div class="dropdown-divider"></div>
+              <a v-if="isSuper" href="#" class="dropdown-item">
+                <i class="fas fa-asymmetrik mr-2"></i> Student Results
+              </a>
+              </a>
             </div>
           </li>
 
