Removed role login input

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -258,6 +258,18 @@
                   </p>
                 </router-link>
               </li>
+
+              <li v-if="isSuper" class="nav-item">
+                <router-link
+                  to="/results"
+                  class="nav-link"
+                >
+                  <i class="nav-icon fas fa-asymmetrik"></i>
+                  <p>
+                    Student Results
+                  </p>
+                </router-link>
+              </li>
             </ul>
           </nav>
           <!-- /.sidebar-menu -->
