--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -64,11 +64,11 @@
               <span> New </span>
             </a>
             <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-              <a v-if="isSuper" href="#" class="dropdown-item">
+              <a v-if="isSuper()" href="#" class="dropdown-item">
                 <i class="fas fa-school mr-2"></i> Institution
               </a>
               <div class="dropdown-divider"></div>
-              <a v-if="isSuper" href="#" class="dropdown-item">
+              <a v-if="isSuper()" href="#" class="dropdown-item">
                 <i class="fas fa-user mr-2"></i> User
               </a>
               <div class="dropdown-divider"></div>
@@ -85,12 +85,12 @@
                 <i class="fas fa-gem mr-2"></i> Application
               </a>
               <div class="dropdown-divider"></div>
-              <a v-if="isSuper" href="#" class="dropdown-item">
+              <a v-if="isSuper()" href="#" class="dropdown-item">
                 <i class="fas fa-asterisk mr-2"></i> Attribute
               </a>
               <div class="dropdown-divider"></div>
-              <a v-if="isSuper" href="#" class="dropdown-item">
-                <i class="fas fa-asymmetrik mr-2"></i> Student Results
+              <a v-if="isSuper()" href="#" class="dropdown-item">
+                <i class="fas fa-file-alt mr-2"></i> Student Results
               </a>
               </a>
             </div>
@@ -161,7 +161,7 @@
               <!-- <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image"> -->
             </div>
             <div class="info">
-              <a href="#" class="d-block">Bernard Mussa</a>
+              <a href="#" class="d-block"><%= email %></a>
             </div>
           </div>
 
@@ -187,7 +187,7 @@
                 </router-link>
               </li>
 
-              <li v-if="isSuper" class="nav-item">
+              <li v-if="isSuper()" class="nav-item">
                 <router-link
                   to="/institutions"
                   class="nav-link"
@@ -235,7 +235,7 @@
                 </router-link>
               </li>
 
-              <li v-if="isSuper" class="nav-item">
+              <li v-if="isSuper()" class="nav-item">
                 <router-link
                   to="/users"
                   class="nav-link"
@@ -247,7 +247,7 @@
                 </router-link>
               </li>
 
-              <li v-if="isSuper" class="nav-item">
+              <li v-if="isSuper()" class="nav-item">
                 <router-link
                   to="/attributes"
                   class="nav-link"
@@ -259,12 +259,12 @@
                 </router-link>
               </li>
 
-              <li v-if="isSuper" class="nav-item">
+              <li v-if="isSuper()" class="nav-item">
                 <router-link
                   to="/results"
                   class="nav-link"
                 >
-                  <i class="nav-icon fas fa-asymmetrik"></i>
+                  <i class="nav-icon fas fa-file-alt"></i>
                   <p>
                     Student Results
                   </p>
@@ -284,8 +284,7 @@
           <div class="container-fluid">
             <router-view></router-view>
 
-            <new-criteria-modal></new-criteria-modal>
-
+            <new-program-modal :progs = "this.$store.state.progs"></new-program-modal>
           </div>
           <!-- /.container-fluid -->
         </div>
@@ -333,7 +332,9 @@
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
    
     <script src="libs/axios.js"></script>
-
+    <script>
+      const role = JSON.stringify("<%= role %>");
+    </script>
     <!-- Load vue -->
     <script src="vue/vuex.js"></script>
     <script src="vue/vue.js"></script>
