--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -381,6 +381,7 @@
       
       $(document).ready(function () {
         bsCustomFileInput.init();
+        $('.collapse').collapse();
       });
 
     </script>
