Client Allocation gui

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -258,10 +258,16 @@
                   </p>
                 </router-link>
               </li>
+
+              <li class="mt-5">
+                <allocate-btn></allocate-btn>
+              </li>
             </ul>
+            
           </nav>
           <!-- /.sidebar-menu -->
         </div>
+        
         <!-- /.sidebar -->
       </aside>
 
